RESOLVED FIXED105945
HTML preload scanner doesn't need to remember whether we're scanning the body
https://bugs.webkit.org/show_bug.cgi?id=105945
Summary HTML preload scanner doesn't need to remember whether we're scanning the body
Adam Barth
Reported 2013-01-02 14:08:14 PST
HTML preload scanner doesn't need to remember whether we're scanning the body
Attachments
Patch (9.21 KB, patch)
2013-01-02 14:08 PST, Adam Barth
no flags
Adam Barth
Comment 1 2013-01-02 14:08:59 PST
Eric Seidel (no email)
Comment 2 2013-01-02 14:25:10 PST
Do we know why/when it was added?
Adam Barth
Comment 3 2013-01-02 14:28:47 PST
Looks like it became unused in http://trac.webkit.org/changeset/82628/trunk/Source/WebCore/loader/cache/CachedResourceLoader.cpp when we switched to smarter heuristics.
Eric Seidel (no email)
Comment 4 2013-01-02 14:42:13 PST
Comment on attachment 181063 [details] Patch LGTM. The comment makes me wonder if it's in use by an out-of-trunk mobile port. But OK.
WebKit Review Bot
Comment 5 2013-01-02 15:07:31 PST
Comment on attachment 181063 [details] Patch Clearing flags on attachment: 181063 Committed r138658: <http://trac.webkit.org/changeset/138658>
WebKit Review Bot
Comment 6 2013-01-02 15:07:35 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.