HTML preload scanner doesn't need to remember whether we're scanning the body https://bugs.webkit.org/show_bug.cgi?id=105945

Reviewed by Eric Seidel.

As far as I can tell, no one uses this state.

* html/parser/CSSPreloadScanner.cpp:
(WebCore::CSSPreloadScanner::CSSPreloadScanner):
(WebCore::CSSPreloadScanner::scan):
(WebCore::CSSPreloadScanner::emitRule):
* html/parser/CSSPreloadScanner.h:
(CSSPreloadScanner):
* html/parser/HTMLPreloadScanner.cpp:
(WebCore::PreloadTask::preload):
(WebCore::HTMLPreloadScanner::HTMLPreloadScanner):
(WebCore::HTMLPreloadScanner::processToken):
* html/parser/HTMLPreloadScanner.h:
(HTMLPreloadScanner):
* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::preload):
* loader/cache/CachedResourceLoader.h:
(CachedResourceLoader):


Canonical link: https://commits.webkit.org/124140@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138658 268f45cc-cd09-0410-ab3c-d52691b4dbfc